crates/toml_edit/tests/snapshots/invalid/key/space.stderr
TOML parse error at line 1, column 3
  |
1 | a b = 1
  |   ^
key with no value, expected `=`
